--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="C:\Users\adari\Downloads\WIN_20221205_23_15_52_Pro-modified.png" alt="AG"></td>
+            <td><img src="C:\Users\adari\OneDrive\Pictures\Camera Roll\images" alt="AG"></td>
             <td><h1>Hello AG 🤘</h1>
                 <p><strong>Ag is an actor</strong></p>
                 <p>Ag loves watching movies and has immense passion towards movies</p></td>
