--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <tr>
             <td><img src="C:\Users\adari\OneDrive\Pictures\Camera Roll\images" alt="AG"></td>
             <td><h1>Hello AG 🤘</h1>
-                <p><strong>Ag is an actor</strong></p>
+                <p><strong>Ag is a Student</strong></p>
                 <p>Ag loves watching movies and has immense passion towards movies</p></td>
         </tr>
     </table>
